force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuviAI/objects/LLM_Configuration__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>Encrypted API key for the LLM provider</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>