force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuviAI/objects/LLM_Configuration__mdt/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>Endpoint URL for the LLM API</description>
    <label>Base URL</label>
    <type>Url</type>
</CustomField>