force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuviAI/objects/LLM_Configuration__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>