force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuviAI/objects/LLM_Configuration__mdt/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <description>Maximum tokens for the response</description>
    <label>Max Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>