force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuviAI/objects/LLM_Configuration__mdt/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <description>Model identifier (e.g., &quot;gpt-4-turbo&quot;)</description>
    <label>Model Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>