force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuviAI/objects/LLM_Configuration__mdt/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OpenAI</fullName>
                <default>true</default>
                <label>OpenAI</label>
            </value>
            <value>
                <fullName>Anthropic</fullName>
            </value>
            <value>
                <fullName>DeepSeek</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>OpenRouter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>