force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuviAI/objects/LLM_Configuration__mdt/fields/Supports_Files__c.field-meta.xml
<CustomField>
    <fullName>Supports_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the LLM supports base64 files</description>
    <label>Supports Files</label>
    <type>Checkbox</type>
</CustomField>